Styles: Prevent wrapping of navigation links

--- a/src/app/components/layout/container.module.css
+++ b/src/app/components/layout/container.module.css
@@ -1,6 +1,6 @@
 .page {
 	display: grid;
-	grid-template-columns: 18rem 1fr;
+	grid-template-columns: var(--size--sidebar) 1fr;
 	align-items: stretch;
 	justify-items: center;
 	min-height: 100svh;
