--- a/src/app/components/navigation.module.css
+++ b/src/app/components/navigation.module.css
@@ -1,8 +1,8 @@
 .links {
 	list-style: none;
-	padding: 0;
 	margin-block-start: calc(var(--spacing) * 0.5);
 	margin-inline: calc(var(--spacing) * -1);
+	padding: 0;
 }
 
 .links li {
@@ -12,7 +12,7 @@
 }
 
 .links li:has(a[aria-current="page"])::before {
-	content: '';
+	content: "";
 	position: absolute;
 	inset: 2px auto 2px 6px;
 	width: 4px;
@@ -22,6 +22,9 @@
 
 .links a {
 	display: block;
+	text-wrap: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .links a:hover {
